feat: Expand Java Technical Scenarios Bank from 50+ to 150+ inquiries with comprehensive coverage of JVM internals, serialization, JPA/Hibernate, REST APIs, testing, design patterns, messaging, and advanced coding problems.